tests/paczka1/fuzzy1/39267474.err
Error in line 16: iHtYFGoue9 A383 299,29
Error in line 11: S838 S838 81,6
Error in line 7: tO5ho3Z S838 251,9
Error in line 28: QjyVWlKWbsm A665 41,2
Error in line 29: FMd A383 6,0
Error in line 9: iHtYFGoue9 A383 60,1
